--- a/src/styles/NewIncomeTransactionModal.css
+++ b/src/styles/NewIncomeTransactionModal.css
@@ -15,3 +15,22 @@
     gap: 15px;
 }
 
+.hide-parent-modal {
+    z-index: -1;
+    position: relative;
+}
+
+.new-merchant-button {
+    margin-top: 20px;
+}
+
+.new-merchant-form-container {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #6c757d;
+    margin: 10px;
+    border-radius: 5px;
+    padding: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for depth */
+    gap: 15px;
+}
