added indicator for multiple category txns and fixed date format

--- a/src/styles/NewTransactionModal.css
+++ b/src/styles/NewTransactionModal.css
@@ -8,6 +8,10 @@
     border-radius: 50%;
 }
 
+.top-level-transaction-modal{
+  overflow-y: auto;
+}
+
 .new-transaction-modal {
   display: flex;
   flex-direction: column;
