--- a/src/styles/BudgetAndTransactions.css
+++ b/src/styles/BudgetAndTransactions.css
@@ -17,11 +17,20 @@ h1 {
   padding: 10px;
 }
 
-.budgets-container {
+.transactions-container {
     width: 100%;
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow-y: auto;
+    overflow-x: hidden;
+    max-height: calc(100vh - 240px); /* Adjusts for potential margins, headers, etc. */
+    box-sizing: border-box; /* Ensures padding/borders don't push beyond the max-height */
+}
+
+thead {
+    position: sticky;
+    top: 0;
+    background-color: #f5f5f5;
 }
 
 .budget-item {
@@ -35,13 +44,11 @@ h1 {
 }
 
 tr:nth-child(odd) {
-  background-color: #f9f9f9;
-  background-color: #e9ecef; /* Very Light Gray */
+  background-color: #ffffff; /* White */
 }
 
 tr:nth-child(even) {
-  background-color: #e0e0e0;
-  background-color: #ffffff; /* White */
+  background-color: #e9ecef; /* Very Light Gray */
 }
 
 .positive-transaction {
