--- a/src/styles/ZipcodeAndTaxRatesUpdater.css
+++ b/src/styles/ZipcodeAndTaxRatesUpdater.css
@@ -6,3 +6,22 @@
     width: 350px;
     margin-top: 25px;
 }
+
+.states-and-tax-categories-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hide-parent-modal{
+    z-index: -1;
+    position: relative;
+}
+
+.hide {
+    display: none;
+}
+
+.add-state-button {
+    margin-top: 10px;
+}
